# vlcd

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c  client.py  compile.sh  install.ps1  key_client.c  server.c  server.py
assets/wifi/: wifi.ai
src/: '  :w  canvas.c  canvas.h  execute.c  execute.h  renderer.c  rules.c  rules.h  sockets.c  sockets.h  structs.c  structs.h  utils.c  utils.h
src/commands/: fill.c  frame.b.c  frame.c  init.c  spixel.c
src/exec/: fill.c  fill.h  frame.c  frame.h  init.c  init.h  read.c  read.h  spixel.c  spixel.h
src/get/: one.c
src/udp/: rcv.c  rcv.h  snd.c  snd.h
src/upd/: rcv.c  snd.c
test/: galaga.sh  server_exec.c
